# forensics-ssh-tls-tunnel-detection

./: README.md  endpoint.py  main.py
clientside/: stunnel-client.conf  stunnel.pem
serverside/: stunnel.conf
tls_parser/: Cargo.toml
tls_parser/src/: ethparse.rs  main.rs  rulegen.rs
tls_tunnel/: clientside.py  endpoint.py  generic.py  howto  main.py
tls_tunnel/serverside/: stunnel.pem
