[package]
name = "tlsparser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap-parser = "0.14.0"
pktparse = {version= "0.4.x",features = ["derive"]}
rshark = "0.0.1"
serde = { version = "1.x.x", features = ["derive"] }
tls-parser = "0.7"
